--- a/docs/tutorials/Step_2-Clean_Network.ipynb
+++ b/docs/tutorials/Step_2-Clean_Network.ipynb
@@ -39,16 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, sys\n",
     "import time\n",
     "import networkx as nx\n",
     "import pickle\n",
     "\n",
     "# import the GOSTnets library\n",
+    "sys.path.insert(0, r\"C:\\WBG\\Work\\Code\\GOSTnets\\src\")\n",
     "import GOSTnets as gn"
    ]
   },
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
     "data_pth = os.path.join(pth, \"tutorial_outputs\")\n",
     "\n",
     "# read back your graph from step 1 from you saved pickle\n",
-    "G = pickle.load(open(os.path.join(data_pth, \"iceland_unclean.pickle\"), \"rb\"))"
+    "G = pickle.load(open(os.path.join(data_pth, \"iceland_overture_sample.pickle\"), \"rb\"))"
    ]
   },
   {
@@ -85,9 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1410\n",
+      "(0, {'x': -21.840717, 'y': 64.0975477})\n",
+      "1818\n",
+      "(0, 487, {'infra_type': 'living_street', 'one_way': None, 'osm_id': 'a503f6f4-f86d-4027-9377-8e56572438cc', 'key': 'edge_581', 'length': 0.03979436803394712, 'Wkt': <LINESTRING (-21.841 64.098, -21.84 64.097)>})\n"
+     ]
+    }
+   ],
    "source": [
     "# inspect the graph\n",
     "nodes = list(G.nodes(data=True))\n",
@@ -100,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiDiGraph with 1410 nodes and 1818 edges\n"
+     ]
+    }
+   ],
    "source": [
     "# you can also print general graph information with networkx\n",
     "print(G)"
@@ -110,9 +130,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mSignature:\u001b[39m\n",
+      "gn.clean_network(\n",
+      "    G,\n",
+      "    wpath=\u001b[33m''\u001b[39m,\n",
+      "    output_file_name=\u001b[33m''\u001b[39m,\n",
+      "    UTM=\u001b[33m'epsg:3857'\u001b[39m,\n",
+      "    WGS=\u001b[33m'epsg:4326'\u001b[39m,\n",
+      "    junctdist=\u001b[32m50\u001b[39m,\n",
+      "    verbose=\u001b[38;5;28;01mFalse\u001b[39;00m,\n",
+      ")\n",
+      "\u001b[31mDocstring:\u001b[39m\n",
+      "Topologically simplifies an input graph object by collapsing junctions and removing interstital nodes\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "G : networkx.graph object\n",
+      "    a graph object containing nodes and edges. Edges should have a property called 'Wkt' containing geometry objects describing the roads.\n",
+      "wpath : str\n",
+      "    the write path - a drive directory for inputs and output\n",
+      "output_file_name : str\n",
+      "    This will be the output file name with '_processed' appended\n",
+      "UTM : dict\n",
+      "    The epsg code of the projection, in metres, to apply the junctdist\n",
+      "WGS : dict\n",
+      "    the current crs of the graph's geometry properties. By default, assumes WGS 84 (epsg 4326)\n",
+      "junctdist : int, float\n",
+      "    distance within which to collapse neighboring nodes. simplifies junctions. Set to 0.1 if not simplification desired. 50m good for national (primary / secondary) networks\n",
+      "verbose : boolean\n",
+      "    if True, saves down intermediate stages for dissection\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "nx.MultiDiGraph\n",
+      "    A simplified graph object\n",
+      "\u001b[31mFile:\u001b[39m      c:\\wbg\\work\\code\\gostnets\\src\\gostnets\\network_clean.py\n",
+      "\u001b[31mType:\u001b[39m      function"
+     ]
+    }
+   ],
    "source": [
     "# To become familiar with the function read the doc string\n",
     "gn.clean_network?"
@@ -133,7 +196,7 @@
    "source": [
     "Iceland_UTMZ = \"epsg:32627\"\n",
     "\n",
-    "WGS = \"epsg:4326\"  # do not adjust. OSM natively comes in ESPG 4326 (Web Mercator)"
+    "WGS = \"epsg:4326\"  # Input CRS; both OSRM and Overture use WGS84"
    ]
   },
   {
@@ -345,8 +408,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gostnets",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
